Fix arena readiness and add setup mode, languages, tablist
Fix arenas not becoming playable after save by validating required
points via StoredLocation persistence and auto-marking ready on save.
Replace inventory GUI with hotbar setup mode and chat arena creation.
Add English/Romanian language packs, separate server-lobby scoreboard,
configurable tablist, and improved world reset rebinding.

Co-authored-by: vladgaming166-prog <vladgaming166-prog@users.noreply.github.com>