@@ -2,10 +2,11 @@ package com.blazeschaos.scoreboard;
 
 import com.blazeschaos.BlazesChaosPlugin;
 import com.blazeschaos.game.GameInstance;
+import com.blazeschaos.game.GameState;
 import com.blazeschaos.util.ColorUtil;
+import io.papermc.paper.scoreboard.numbers.NumberFormat;
 import me.clip.placeholderapi.PlaceholderAPI;
 import net.kyori.adventure.text.Component;
-import io.papermc.paper.scoreboard.numbers.NumberFormat;
 import org.bukkit.Bukkit;
 import org.bukkit.configuration.file.FileConfiguration;
 import org.bukkit.entity.Player;
@@ -27,44 +28,32 @@ import java.util.concurrent.ConcurrentHashMap;
 public final class ScoreboardManager {
 
     private static final String[] ENTRY_KEYS = {
-            "§0", "§1", "§2", "§3", "§4", "§5", "§6", "§7",
-            "§8", "§9", "§a", "§b", "§c", "§d", "§e"
+            "§0§r", "§1§r", "§2§r", "§3§r", "§4§r", "§5§r", "§6§r", "§7§r",
+            "§8§r", "§9§r", "§a§r", "§b§r", "§c§r", "§d§r", "§e§r"
     };
 
     private final BlazesChaosPlugin plugin;
     private final Map<UUID, Scoreboard> boards = new ConcurrentHashMap<>();
     private int titleFrame;
-    private @Nullable BukkitTask animationTask;
+    private @Nullable BukkitTask task;
 
     public ScoreboardManager(@NotNull BlazesChaosPlugin plugin) {
         this.plugin = plugin;
     }
 
     public void start() {
-        if (animationTask != null) {
-            animationTask.cancel();
-        }
-        int interval = Math.max(1, plugin.configs().scoreboard().getInt("animations.frame-interval", 10));
-        animationTask = Bukkit.getScheduler().runTaskTimer(plugin, () -> {
+        stopTask();
+        int interval = Math.max(1, plugin.configs().scoreboard().getInt("update-interval", 20));
+        task = Bukkit.getScheduler().runTaskTimer(plugin, () -> {
             titleFrame++;
             for (Player player : Bukkit.getOnlinePlayers()) {
-                if (boards.containsKey(player.getUniqueId())) {
-                    GameInstance game = plugin.gameManager().getByPlayer(player);
-                    if (game != null) {
-                        apply(player, game);
-                    } else {
-                        applyLobby(player);
-                    }
-                }
+                refresh(player);
             }
         }, interval, interval);
     }
 
     public void stop() {
-        if (animationTask != null) {
-            animationTask.cancel();
-            animationTask = null;
-        }
+        stopTask();
         for (UUID uuid : new ArrayList<>(boards.keySet())) {
             Player player = Bukkit.getPlayer(uuid);
             if (player != null) {
@@ -74,37 +63,58 @@ public final class ScoreboardManager {
         boards.clear();
     }
 
-    public void applyLobby(@NotNull Player player) {
-        if (!plugin.configs().scoreboard().getBoolean("enabled", true)) {
-            return;
+    private void stopTask() {
+        if (task != null) {
+            task.cancel();
+            task = null;
         }
-        render(player, "lobby", null);
     }
 
-    public void apply(@NotNull Player player, @NotNull GameInstance game) {
+    public void refresh(@NotNull Player player) {
         if (!plugin.configs().scoreboard().getBoolean("enabled", true)) {
             return;
         }
-        String section = game.isSpectator(player.getUniqueId()) ? "spectator" : "game";
-        if (game.getState().isJoinable()) {
-            section = "lobby";
+        if (plugin.setupMode().isInSetup(player)) {
+            return;
         }
+        GameInstance game = plugin.gameManager().getByPlayer(player);
+        String section = resolveSection(player, game);
         render(player, section, game);
     }
 
+    public void applyLobby(@NotNull Player player) {
+        render(player, "server-lobby", null);
+    }
+
+    public void apply(@NotNull Player player, @NotNull GameInstance game) {
+        render(player, resolveSection(player, game), game);
+    }
+
     public void updateGame(@NotNull GameInstance game) {
-        int interval = plugin.configs().scoreboard().getInt("update-interval", 20);
-        if (game.getGameTicks() % Math.max(1, interval) != 0 && !game.getState().isJoinable()) {
-            // still update frequently enough via animation task
-        }
         for (Player player : game.getPlayers()) {
             apply(player, game);
         }
     }
 
+    private @NotNull String resolveSection(@NotNull Player player, @Nullable GameInstance game) {
+        if (game == null) {
+            return "server-lobby";
+        }
+        if (game.isSpectator(player.getUniqueId())) {
+            return "spectator";
+        }
+        return switch (game.getState()) {
+            case LOBBY, WAITING -> "waiting";
+            case STARTING -> "starting";
+            case PLAYING, CHAOS_EVENT, DEATHMATCH -> "playing";
+            case ENDING, RESETTING -> "ending";
+        };
+    }
+
     private void render(@NotNull Player player, @NotNull String section, @Nullable GameInstance game) {
         FileConfiguration config = plugin.configs().scoreboard();
-        Scoreboard board = boards.computeIfAbsent(player.getUniqueId(), id -> Bukkit.getScoreboardManager().getNewScoreboard());
+        Scoreboard board = boards.computeIfAbsent(player.getUniqueId(),
+                id -> Bukkit.getScoreboardManager().getNewScoreboard());
         Objective objective = board.getObjective("blazechaos");
         if (objective == null) {
             objective = board.registerNewObjective("blazechaos", Criteria.DUMMY, Component.empty());
@@ -114,21 +124,23 @@ public final class ScoreboardManager {
             objective.numberFormat(NumberFormat.blank());
         }
 
-        Component title = ColorUtil.parse(resolveTitle(config, section));
-        objective.displayName(title);
+        objective.displayName(ColorUtil.parse(resolveTitle(config, section)));
 
         List<String> lines = config.getStringList(section + ".lines");
+        if (lines.isEmpty() && section.equals("server-lobby")) {
+            lines = config.getStringList("lobby.lines");
+        }
         List<String> rendered = new ArrayList<>();
         for (String line : lines) {
             rendered.add(applyPlaceholders(player, game, line));
         }
         while (rendered.size() > 15) {
-            rendered.remove(rendered.size() - 1);
+            rendered.removeLast();
         }
 
         for (int i = 0; i < ENTRY_KEYS.length; i++) {
             String entry = ENTRY_KEYS[i];
-            Team team = board.getTeam("bc_" + i);
+            Team team = board.getTeam("bc" + i);
             if (i >= rendered.size()) {
                 board.resetScores(entry);
                 if (team != null) {
@@ -137,12 +149,19 @@ public final class ScoreboardManager {
                 continue;
             }
             if (team == null) {
-                team = board.registerNewTeam("bc_" + i);
+                team = board.registerNewTeam("bc" + i);
+                team.addEntry(entry);
+            } else if (!team.hasEntry(entry)) {
                 team.addEntry(entry);
             }
-            team.prefix(ColorUtil.parse(rendered.get(i)));
+            // Modern TAB-like: put text in prefix, keep suffix empty
+            String text = rendered.get(i);
+            if (text.length() > 64) {
+                text = text.substring(0, 64);
+            }
+            team.prefix(ColorUtil.parse(text));
             team.suffix(Component.empty());
-            objective.getScore(entry).setScore(rendered.size() - i);
+            objective.getScore(entry).setScore(15 - i);
         }
 
         player.setScoreboard(board);
@@ -160,14 +179,21 @@ public final class ScoreboardManager {
 
     private @NotNull String applyPlaceholders(@NotNull Player player, @Nullable GameInstance game, @NotNull String input) {
         String text = input
-                .replace("%blazechaos_players%", game == null ? String.valueOf(Bukkit.getOnlinePlayers().size()) : String.valueOf(game.playerCount()))
+                .replace("%blazechaos_players%", game == null ? "0" : String.valueOf(game.playerCount()))
                 .replace("%blazechaos_alive%", game == null ? "0" : String.valueOf(game.aliveCount()))
                 .replace("%blazechaos_event%", currentEventName(game))
                 .replace("%blazechaos_next_event%", game == null ? "-" : String.valueOf(game.getNextEventSeconds()))
-                .replace("%blazechaos_time%", game == null ? "0" : String.valueOf(game.getGameSeconds()))
-                .replace("%blazechaos_map%", game == null ? "-" : game.getArena().getName())
+                .replace("%blazechaos_time%", game == null ? "0" : String.valueOf(resolveTime(game)))
+                .replace("%blazechaos_map%", game == null ? "-" : game.getArena().getDisplayName())
                 .replace("%blazechaos_state%", game == null ? "Lobby" : game.getState().display())
+                .replace("%server_online%", String.valueOf(Bukkit.getOnlinePlayers().size()))
                 .replace("%player%", player.getName());
+
+        var stats = plugin.database().getStats(player.getUniqueId(), player.getName());
+        text = text
+                .replace("%blazechaos_wins%", String.valueOf(stats.wins()))
+                .replace("%blazechaos_games%", String.valueOf(stats.games()))
+                .replace("%blazechaos_kills%", String.valueOf(stats.kills()));
 
         if (Bukkit.getPluginManager().isPluginEnabled("PlaceholderAPI")) {
             text = PlaceholderAPI.setPlaceholders(player, text);
@@ -175,12 +201,20 @@ public final class ScoreboardManager {
         return text;
     }
 
+    private int resolveTime(@NotNull GameInstance game) {
+        if (game.getState() == GameState.STARTING) {
+            return game.getCountdownSecondsLeft();
+        }
+        return game.getGameSeconds();
+    }
+
     private @NotNull String currentEventName(@Nullable GameInstance game) {
         if (game == null || game.getActiveEvent() == null) {
             return "None";
         }
         String id = game.getActiveEvent().getId();
-        return ColorUtil.strip(plugin.configs().events().getString("display-names." + id, game.getActiveEvent().getDefaultDisplayName()));
+        return ColorUtil.strip(plugin.configs().events().getString("display-names." + id,
+                game.getActiveEvent().getDefaultDisplayName()));
     }
 
     public void remove(@NotNull Player player) {
